update tag view for better visibility [fix #33]

--- a/WebApp/src/routes/tags/tags.scss
+++ b/WebApp/src/routes/tags/tags.scss
@@ -11,8 +11,8 @@
 .tags-element {
   display: flex;
   align-items: center;
-  border: solid 1px black;
-  padding: 2px 5px;
+  border: solid 1px rgba(0, 0, 0, 0.5);
+  padding: 4px 8px;
   margin: 0 10px 10px 0;
 }
 
