--- a/WebApp/src/styles/darktheme.scss
+++ b/WebApp/src/styles/darktheme.scss
@@ -48,7 +48,25 @@ select option {
 }
 
 .tags-element {
-  border-color: white;
+  display: flex;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-color: none;
+  padding: 4px 8px;
+  margin: 0 10px 10px 0;
+}
+
+.tags-element-delete {
+  cursor: pointer;
+  margin-left: 8px;
+  background-color: rgba(0, 0, 0, 0.15);
+  border-color: rgba(255, 255, 255, 0.65);
+  padding: 0px 4px;
+  font-size: 12px;
+
+  &:hover {
+    background-color: rgba(255, 0, 0, 0.45);
+  }
 }
 
 .modal-conatiner {
